@@ -1,4 +1,4 @@
-<p>Total websites supported (22/03/2008): <strong>52</strong></p>
+<p>Total websites supported (30/03/2008): <strong>55</strong></p>
 <ul>
 	<li>123video</li>
 	<li>5min</li>
@@ -13,17 +13,20 @@
 	<li>Ceknito</li>
 	<li>CinemaVIP</li>
 	<li>Clip4e</li>
+	<li>ClipFish</li>
 	<li>Dailymotion</li>
 	<li>Dumpalink</li>
 	<li>GameSpot</li>
 	<li>GameTrailers</li>
 	<li>Glumbert</li>
 	<li>Google Video</li>
+	<li>GodTube</li>
 	<li>LiveVideo</li>
 	<li>Lulu TV</li>
 	<li>Metacafe</li>
 	<li>MySpaceTv</li>
 	<li>MySpass</li>
+	<li>MyVideo</li>
 	<li>Sclipo</li>
 	<li>Spike</li>
 	<li>Stage6</li>
